# veides_agent_ros

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: veides_agent.launch
msg/: Action.msg  Method.msg
nodes/: veides_agent_node
src/veides_agent/: __init__.py  logger.py  services.py
srv/: ActionCompleted.srv  Facts.srv  MethodCompleted.srv  RegisterMethod.srv  Trails.srv
tests/: conftest.py  test_services.py
